Run extraction on configurable thread pool; expose active worker count
Each extraction worker runs on its own thread (default 5, set via
tubereturns.pipeline.extraction.threads). The same video cannot be
processed by two threads simultaneously — queuedVideoIds guards the
full lifetime from enqueue through end of processing. AiModelService
uses a ThreadLocal model index so per-video retry rotation is isolated
per thread, with a shared lastKnownModelIndex for admin panel display.
models list is CopyOnWriteArrayList for thread-safe payment-required
removal. Error-logged OpenRouter responses are stripped of leading/
trailing whitespace.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>